add tablero de juego en el main

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
+    <script src="./js/index.js" async></script>
     <title>Tres en Raya</title>
 </head>
 <body>
@@ -37,6 +38,19 @@
     </header>
     <main>
         <article>
+            <h1>Tres en raya</h1>
+            <h2 id="textoVictoria">Has ganado! :)</h2>
+            <div id="tablero">
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+	        </div>	
 
         </article>
 
