--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"/>
     <script src="./js/index.js" async></script>
     <title>Tres en Raya</title>
 </head>
@@ -56,6 +57,29 @@
 
     </main>
     <footer>
+        <ul>
+            <li>
+                <a href="#">
+                    <i class="fab fa-github-square"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="fab fa-youtube"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="fab fa-twitter-square"></i>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class="fab fa-facebook-square"></i>
+                </a>
+            </li>
+        </ul>
+        <p>Desarrollado por 💻Rody Josue Ccoyllo Cule💻 &copy;2022.Todos los derechos reservados</p>
 
     </footer>
 
