add estilo al header

--- a/index.html
+++ b/index.html
@@ -9,30 +9,35 @@
     <script src="./js/index.js" async></script>
     <title>Tres en Raya</title>
 </head>
-<body>
-    <header>
-        <nav>
-           <ul>
-               <li>
-                   <a href="#">
+<body class="body">
+    <header class="header">
+        <nav class="header__nav">
+            
+            <figure class="header__nav__image-play-container" >
+                <img class="image-play__image-play" src="./img/icono-play.jpg" alt="imagen de tablero tres en raya"/>
+            </figure>
+            
+           <ul class="header__nav__list-menus-container">
+                <li class="nav__list-menus__menu">
+                   <a class="list-menus__menu-link" href="#">
                     Home
-               </a>
-            </li>
-               <li>
-                   <a href="#">
+                    </a>
+                </li>
+                <li class="nav__list-menus__menu">
+                   <a class="list-menus__menu-link" href="#">
                     Reglas
-               </a>
-            </li>
-               <li>
-                   <a href="#">
+                    </a>
+                </li>
+                <li class="nav__list-menus__menu">
+                   <a class="list-menus__menu-link" href="#">
                     +Juegos
-               </a>
-            </li>
-               <li>
-                   <a href="#">
+                    </a>
+                </li>
+                <li class="nav__list-menus__menu">
+                   <a class="list-menus__menu-link" href="#">
                     Nosotros
-               </a>
-            </li>
+                    </a>
+                </li>
            </ul>
         </nav>
 
