add estilos al tablareo de juego

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"/>
     <script src="./js/index.js" async></script>
     <title>Tres en Raya</title>
 </head>
@@ -42,20 +45,22 @@
         </nav>
 
     </header>
-    <main>
-        <article>
-            <h1>Tres en raya</h1>
-            <h2 id="textoVictoria">Has ganado! :)</h2>
-            <div id="tablero">
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
-                <button></button>
+    <main class="main">
+        <article class="main__article">
+            <h1 class="article__title">Tres en raya</h1>
+            <h2 class="article__text-winner" id="textoVictoria">Has ganado! :)</h2>
+           
+            
+            <div class="article__boar" id="tablero">
+                <button class="article__boar__button" ></button>
+                <button class="article__boar__button" ></button>
+                <button class="article__boar__button" ></button>
+                <button class="article__boar__button" ></button>
+                <button class="article__boar__button" ></button>
+                <button class="article__boar__button" ></button>
+                <button class="article__boar__button" ></button>
+                <button class="article__boar__button" ></button>
+                <button class="article__boar__button" ></button>
 	        </div>	
 
         </article>
