add contenido a la seccion rules

--- a/index.html
+++ b/index.html
@@ -66,6 +66,46 @@
         </article>
 
     </main>
+    <section class="rules">
+        <figure class="rules__image-tres-raya-container">
+            <img class="image-tres-raya__image" src="./img/tres-en-raya.png" alt="tablero de tres en raya">
+        </figure>
+        <div class="rules__rules-play-container">
+            <h3 class="rules-play__title">Reglas de Juego</h3>
+            <ul class="rules-play__rules-list-container">
+                <li class="rules-list_rule">El juego trata de ir marcando los espacios del tablero alternadamente hasta queuno
+                    de los jugadores consiga hacer tres en raya. La línea puede ser horizontal, diagonal overtical.
+                </li>
+                <li class="rules-list_rule">
+                    Un jugador será el símbolo X y el otro O. Por ejemplo, el primer jugador (X) empieza
+                    a jugar y marca con su símbolo una de las casillas.
+                </li>
+                <li class="rules-list_rule">
+                    El siguiente jugador (O) marcará otra de las casillas.
+                </li>
+                <li class="rules-list_rule">
+                    Ahora vuelve a ser el turno del jugador X.
+                </li>
+                <li class="rules-list_rule">
+                    El jugador O vuelve a recuperar su turno.
+                </li>
+                <li class="rules-list_rule">
+                    X marca otra casilla.
+                </li>
+                <li class="rules-list_rule">
+                    O marca otra casilla y ha conseguido hacer ¡tres en raya! El jugador O ha ganado la partida.
+
+                </li>
+
+            </ul>
+
+        </div>
+
+    </section>
+
+
+
+
     <footer>
         <ul>
             <li>
