--- a/index.html
+++ b/index.html
@@ -106,30 +106,30 @@
 
 
 
-    <footer>
-        <ul>
-            <li>
-                <a href="#">
-                    <i class="fab fa-github-square"></i>
+    <footer class="footer">
+        <ul class="footer__list-container">
+            <li class="footer__list__item">
+                <a class="list__item__link-social-media" href="#">
+                    <i class="fab fa-github-square social-media__icon"></i>
                 </a>
             </li>
-            <li>
-                <a href="#">
-                    <i class="fab fa-youtube"></i>
+            <li class="footer__list__item">
+                <a class="list__item__link-social-media " href="#">
+                    <i class="fab fa-youtube social-media__icon"></i>
                 </a>
             </li>
-            <li>
-                <a href="#">
-                    <i class="fab fa-twitter-square"></i>
+            <li class="footer__list__item">
+                <a class="list__item__link-social-media" href="#">
+                    <i class="fab fa-twitter-square social-media__icon"></i>
                 </a>
             </li>
-            <li>
-                <a href="#">
-                    <i class="fab fa-facebook-square"></i>
+            <li class="footer__list__item">
+                <a class="list__item__link-social-media" href="#">
+                    <i class="fab fa-facebook-square social-media__icon"></i>
                 </a>
             </li>
         </ul>
-        <p>Desarrollado por 💻Rody Josue Ccoyllo Cule💻 &copy;2022.Todos los derechos reservados</p>
+        <p class="footer__credits">Desarrollado por 💻Rody Josue Ccoyllo Cule💻 &copy;2022.Todos los derechos reservados</p>
 
     </footer>
 
