--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"/>
+    <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <script src="./js/index.js" async></script>
     <title>Tres en Raya</title>
 </head>
