--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="header__nav">
             
             <figure class="header__nav__image-play-container" >
-                <img class="image-play__image-play" src="./img/icono-play.jpg" alt="imagen de tablero tres en raya"/>
+                <img class="image-play__image-play" src="./img/tres-en-raya.png" alt="imagen de tablero tres en raya"/>
             </figure>
             
            <ul class="header__nav__list-menus-container">
@@ -70,7 +70,7 @@
     </main>
     <section class="rules">
         <figure class="rules__image-tres-raya-container">
-            <img class="image-tres-raya__image" src="./img/tres-en-raya.png" alt="tablero de tres en raya">
+            <img class="image-tres-raya__image" src="./img/tres-en-raya-reglas.webp" alt="tablero de tres en raya">
         </figure>
         <div class="rules__rules-play-container">
             <h3 class="rules-play__title">Reglas de Juego</h3>
