update la funcion estado

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <article class="main__article">
             <h1 class="article__title">Tres en raya</h1>
             <h3 class="article__empieza">Enpieza a juagar ahora</h3>
-            <h2 class="article__text-winner" id="textoVictoria">😀Has ganado la partida😀</h2>
+            <h2 class="article__text-winner" id="articleTextWinner">😀Has ganado la partida😀</h2>
            
             
             <div class="article__boar" id="tablero">
