add el button volver a jugar

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
                 <button class="article__boar__button" ></button>
                 <button class="article__boar__button" ></button>
 	        </div>	
-
+            <input class="article__button-play-again" id="buttonUpdate" type="button" value="Volver a Jugar" />
         </article>
+        
 
     </main>
     <section class="rules">
