update del backround principal

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <footer class="footer">
         <ul class="footer__list-container">
             <li class="footer__list__item">
-                <a class="list__item__link-social-media" href="#">
+                <a class="list__item__link-social-media" href="https://github.com/josueCoder">
                     <i class="fab fa-github-square social-media__icon"></i>
                 </a>
             </li>
