update dw los estilos  article

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet"/>
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="./js/index.js" async></script>
     <title>Tres en Raya</title>
 </head>
@@ -48,12 +49,12 @@
     </header>
     <main class="main">
         <article class="main__article">
-            <h1 class="article__title">Tres en raya</h1>
-            <h3 class="article__empieza">Enpieza a juagar ahora</h3>
-            <h2 class="article__text-winner" id="articleTextWinner">😀Has ganado la partida😀</h2>
+            <h1 class="article__title ">Tres en raya</h1>
+            <h3 class="article__empieza ">Enpieza a juagar ahora</h3>
+            <h2 class="article__text-winner  " id="articleTextWinner">😀Has ganado la partida😀</h2>
            
             
-            <div class="article__boar" id="tablero">
+            <div class="article__boar animate__animated animate__flipInX " id="tablero">
                 <button class="article__boar__button" ></button>
                 <button class="article__boar__button" ></button>
                 <button class="article__boar__button" ></button>
